# missionai-app-v1

./: .gitignore  DISTRIBUTION_README.md  README_INSTALL.md  build-mac.command  build-windows-clean.ps1  component_cleanup_final_report.md  component_cleanup_report.md  component_usage_report.md  components_directory_comparison.md  create-windows-deploy-package.sh  install-dependencies-auto.command  install-dependencies.command  next.config.js  package-lock.json  package.json  remaining_components_check.md  start-dev.command  start-dev.sh  tsconfig.json  unused_files_report.md
app/: globals.css  layout.tsx  page.tsx  page.tsx.bak
components/: AIAssistantPanel.tsx  AlluvialDiagram.tsx  AlluvialDiagram3D.tsx  BubbleChart.tsx  BusinessPlanCard.tsx  BusinessPlanForm.tsx  BusinessProjectForm.tsx  (+55 more)
src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json  template-data.json
src-tauri/icons/: icon.icns
src-tauri/resources/: README.md
src-tauri/src/: main.rs
src-tauri/src/api/: handlers.rs  mod.rs  routes.rs  server.rs
src-tauri/src/commands/: agent_system.rs  app.rs  chromadb.rs  companies.rs  db.rs  design_doc.rs  dialog.rs  fs.rs  mod.rs  organization.rs  organization_company_display.rs  plantuml.rs  system.rs
src-tauri/src/database/: agent_system.rs  ai_settings.rs  auth.rs  backup.rs  business_plan_management.rs  chromadb.rs  companies.rs  container.rs  design_doc.rs  export.rs  mcp_tools.rs  mod.rs  organization.rs  organization_company_display.rs  pool.rs  store.rs  themes.rs  vector_search.rs
src-tauri/src/db/: mod.rs  write_job.rs  write_worker.rs
(+666 files in other folders)
