[package]
name = "mission-ai"
version = "2.1.2"
description = "MissionAI - AI-powered mission management desktop application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
default-run = "mission-ai"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [ "devtools"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
anyhow = "1.0"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
async-channel = "2.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
sha2 = "0.10"
# HTTPサーバー用
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
# ベクトル検索用（hnsw_rs: RustネイティブのHNSW実装）
hnsw_rs = "0.3.3"
# ChromaDB統合用
chromadb = "2.3.0"
reqwest = { version = "0.11", features = ["json"] }
# CSVパーサー
csv = "1.3"
# ホームディレクトリ取得用
dirs = "5.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "import_members_direct"
path = "../scripts/import_members_direct.rs"

